# spidey-bin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: app.h  movement.h  platform.h  renderer.h  spider.h  state_machine.h  tray.h  types.h
src/: app.cpp  main.cpp  movement.cpp  platform_linux.cpp  platform_windows.cpp  renderer.cpp  spider.cpp  state_machine.cpp  tray.cpp
